# libggraph

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
docs/reference/: Makefile.am  libggraph-docs.sgml  libggraph-docs.sgml.in  libggraph-sections.txt  version.xml.in
examples/: Makefile.am  Makefile.am_fragment  README  example-dist.am  example-path.am  examples.am
examples/graph/: Makefile.am  graph.c
examples/sgraph_construct/: Makefile.am  sgraph_construct.c  topology.dia
examples/sgraph_subgraphs/: Makefile.am  sgraph_subgraphs.c  topology.dia
examples/sgraph_traversing/: Makefile.am  sgraph_traversing.c
examples/simple_graph/: Makefile.am  simple_graph.c
examples/simple_graph_construct/: Makefile.am  simple_graph_construct.c
ggraph/: APIdraft  Makefile.am  class_hierarchy  ggraph.h  ggraphdata.c  ggraphdata.h  ggraphdirectededge.c  ggraphdirectededge.h  ggraphdirectedmultiedge.c  ggraphdirectedmultiedge.h  ggraphedge.c  ggraphedge.h  ggraphentity.c  ggraphentity.h  ggraphenumtypes.c.template  ggraphenumtypes.h.template  ggraphnode.c  ggraphnode.h  ggraphoptions.h  ggraphtriplet.c  ggraphtriplet.h  ggraphtype.h  ggraphtypedefs.h  ggraphundirectededge.c  ggraphundirectededge.h  ggraphundirectedmultiedge.c  ggraphundirectedmultiedge.h
gsgraph/: Makefile.am  gsegraph.h  gsegraphdatatriplet.c  gsegraphdatatriplet.h  gsegraphedge.c  gsegraphedge.h  gsegraphenums.h  gsegraphnode.c  gsegraphnode.h  gsegraphsnapshot.c  gsegraphsnapshot.h  gsegraphtypedefs.h  gsegraphwhole.c  gsegraphwhole.h  gsgraph.h  gsgraphdatapair.c  gsgraphdatapair.h  gsgraphenums.h  gsgraphnode.c  gsgraphnode.h  gsgraphnodearray.c  gsgraphnodearray.h  gsgraphsnapshot.c  gsgraphsnapshot.h  gsgraphtypedefs.h  gsgraphwhole.c  gsgraphwhole.h
junk/: ggraphedgeconnected.h  ggraphtypedefs.h  gsegraph.h  gsegraphdatatriplet.c  gsegraphdatatriplet.h  gsegraphedge.h  gsegraphedgearray.c  gsegraphedgearray.h  gsegraphnode.c  gsegraphnode.h  gsegraphnodearray.h  gsegraphwhole.c  gsegraphwhole.h  libggraphinternal.h
m4/: Makefile.am
pc/: Makefile.am  gsgraph.pc.in
src/: Makefile.am  libggraph-1.0.pc.in  libggraph.h
src/libggraph/: Makefile.am  ggraph.c  ggraph.h  ggrapharray.c  ggrapharray.h  ggraphdataquadruplet.c  ggraphedge.c  ggraphedge.h  ggraphedgearray.c  ggraphedgearray.h  ggraphedgeconnected.h  ggraphtypedefs.h  gsgraph.c  gsgraph.h  gsgrapharray.c  gsgrapharray.h  gsgraphdatapair.c  gsgraphdatapair.h  gsgraphtypedefs.h  libggraphinternal.c
